--- a/joblog.html
+++ b/joblog.html
@@ -39,7 +39,7 @@ JSONTest = function() {
     });
     */
     $.ajax({
-        url: "http://localhost:1337/speedpowers",
+        url: "http://pacific-coast-5384.herokuapp.com/speedpowers",
         type: "POST",
         data: { 
           "speedpowers": [{"speed": 50, "power": 10}]
